--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.webjars.bowergithub.primefaces</groupId>
+            <artifactId>primeflex</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>javax.faces</groupId>
             <artifactId>javax.faces-api</artifactId>
             <version>2.3-pfd</version>
